# FlytBase_APP

./: CMakeLists.txt  README.md  myFirstApp.cpp
parameters_API_app/: CMakeLists.txt  parameters_API_app.cpp
telemetryApi/: CMakeLists.txt  telemetry_api_app.cpp
